Release 1.2 (in development)
============================

* PR#123, #1106: Add epub_use_index configuration value.
  If provided, it will be used instead of html_use_index for epub builder.

* #1111: Fix uppercase word is not found in search when
  html_search_language='ja'. Thanks to tomo saito.

* The ``'fontpkg'`` item in :confval:`latex_elements` now defaults to ``''``
  when the :confval:`language` uses the Cyrillic script.
  Suggested by Dmitry Shachnev.

* PR#114: The LaTeX writer now includes the "cmap" package by default. The
  ``'cmappkg'`` item in :confval:`latex_elements` can be used to control this.
  Thanks to Dmitry Shachnev.

* New locales: #1113: Added Hebrew locale.

* PR#115: Add ``'transition'`` item in :confval:`latex_elements` for
  customizing how transitions are displayed. Thanks to Jeff Klukas.

* #1108: The text writer now correctly numbers enumerated lists with
  non-default start values (based on patch by Ewan Edwards).

* #1074: Add environment version info to the generated search index to avoid
  compatibility issues with old builds.

* New locales: #1097: Added Basque locale.

* Fix text builder did not respect wide/fullwidth characters:
  title underline width, table layout width and text wrap width.

* Add stub for the :confval:`keep_warnings` configuration value in the
  ``conf.py`` generated by sphinx-quickstart.

* Speed up building the search index by caching the results of the word
  stemming routines.  Saves about 20 seconds when building the Python
  documentation.

* #1062: sphinx.ext.autodoc use __init__ method signature for class signature.

* PR#111: Respect add_autodoc_attrgetter() even when inherited-members is set.
  Thanks to A. Jesse Jiryu Davis.

* #1090: Fix gettext does not extract glossary terms.

* #1070: Avoid un-pickling issues when running Python 3 and the saved
  environment was created under Python 2.

* #1069: Fixed error caused when autodoc would try to format signatures of