@@ -1,0 +1,5 @@
+{% extends "layout.html" %}
+{% block body %}
+  <h1>{{ _('Welcome') }}</h1>
+  <p>{%trans%}Sphinx {{ version }}{%endtrans%}</p>
+{% endblock %}
