@@ -5,3 +5,6 @@ import sys, os
 project = 'Sphinx intl <Tests>'
 source_suffix = '.txt'
 keep_warnings = True
+templates_path = ['_templates']
+html_additional_pages = {'index': 'index.html'}
+release = version = '2013.120'
