@@ -137,3 +137,15 @@ def test_gettext_index_entries(app):
 
     # unexpected msgid existent
     assert msgids == []
+
+
+@with_app(buildername='gettext',
+          srcdir=(test_roots / 'test-intl'),
+          doctreedir=(test_roots / 'test-intl' / '_build' / 'doctree'))
+def test_gettext_template(app):
+    app.builder.build_all()
+    assert (app.outdir / 'sphinx.pot').isfile()
+
+    result = (app.outdir / 'sphinx.pot').text(encoding='utf-8')
+    assert "Welcome" in result
+    assert "Sphinx %(version)s" in result
